--- a/kivy_venv/pyvenv.cfg
+++ b/kivy_venv/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\smile\AppData\Local\Programs\Python\Python311
+home = C:\Users\acer\AppData\Local\Programs\Python\Python311
 include-system-site-packages = false
 version = 3.11.0
-executable = C:\Users\smile\AppData\Local\Programs\Python\Python311\python.exe
-command = C:\Users\smile\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Users\smile\OneDrive - Asia Pacific College\Documents\GitHub\APC_2024_2025_SHS_BOOTCAMP_JOBS\kivy_venv
+executable = C:\Users\acer\AppData\Local\Programs\Python\Python311\python.exe
+command = C:\Users\acer\AppData\Local\Programs\Python\Python311\python.exe -m venv D:\APC_2024_2025_SHS_BOOTCAMP_JOBS\kivy_venv
